--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-bootstrap": "^0.32.1",
     "react-scripts": "1.1.4",
     "web3": "^1.0.0-beta.26"
   },
