--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-bootstrap": "^0.32.1",
+    "bootstrap": "^3.3.6",
     "react-scripts": "1.1.4",
     "web3": "^1.0.0-beta.26"
   },
