--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^16.4.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
+    "redux-thunk": "^2.3.0",
     "sha256": "^0.2.0",
     "web3": "^1.0.0-beta.26"
   },
