--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.4.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.0",
+    "react-ga": "^2.5.3",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
     "redux-thunk": "^2.3.0",
