--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "font-awesome": "^4.7.0"
   }
 }
