--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "1.1.4",
     "redux-thunk": "^2.3.0",
     "sha256": "^0.2.0",
+    "styled-components": "^3.3.2",
     "web3": "^1.0.0-beta.26"
   },
   "scripts": {
