--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "aws-sdk": "^2.259.1",
+    "axios": "^0.18.0",
     "bootstrap": "^3.3.6",
     "bytes": "^3.0.0",
     "ipfs-api": "^22.0.0",
+    "jquery": "^3.3.1",
     "lodash": "^4.17.10",
     "moment": "^2.22.1",
     "react": "^16.4.0",
