--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@widgetbot/crate": "^3.1.236",
+    "@widgetbot/embed-api": "^1.1.3",
+    "@widgetbot/react-embed": "^1.2.0",
     "aws-sdk": "^2.260.1",
     "axios": "^0.18.0",
     "bootstrap": "^3.3.6",
