--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-ga": "^2.5.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "recharts": "^1.0.0-beta.10",
     "redux-thunk": "^2.3.0",
     "sha256": "^0.2.0",
     "styled-components": "^3.3.3",
